--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  provider: ^4.0.1
-  get_it: ^3.1.0
-  http: ^0.12.0+4
-  charts_flutter: ^0.8.1
-  shared_preferences: ^0.5.6
+  provider: ^4.1.3
+  get_it: ^4.0.2
+  http: ^0.12.1
+  charts_flutter: ^0.9.0
+  shared_preferences: ^0.5.7+3
 
 dev_dependencies:
   flutter_test:
@@ -75,18 +75,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-  fonts:
-    - family: Roboto
-      fonts:
-        - asset: fonts/Roboto-Thin.ttf
-          weight: 100
-        - asset: fonts/Roboto-Light.ttf
-          weight: 300
-        - asset: fonts/Roboto-Regular.ttf
-          weight: 400
-        - asset: fonts/Roboto-Medium.ttf
-          weight: 500
-        - asset: fonts/Roboto-Bold.ttf
-          weight: 700
-        - asset: fonts/Roboto-Black.ttf
-          weight: 900
