--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,12 +22,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  provider: ^4.1.3
-  get_it: ^4.0.2
-  http: ^0.12.1
+  cupertino_icons: ^1.0.0
+  provider: ^4.3.2+2
+  get_it: ^5.0.1
+  http: ^0.12.2
   charts_flutter: ^0.9.0
-  shared_preferences: ^0.5.7+3
+  shared_preferences: ^0.5.12
 
 dev_dependencies:
   flutter_test:
